[gd_scene load_steps=4 format=3 uid="uid://dkp3nkpbq3e12"]

[ext_resource type="Script" uid="uid://45ymom42ikd0" path="res://settings_manager.gd" id="1_hdmo1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hdmo1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wyi4u"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = 1.0
offset_bottom = 1.0

[node name="SettingsManager" type="Node" parent="."]
script = ExtResource("1_hdmo1")

[node name="Box" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 402.0
offset_top = 272.5
offset_right = 750.0
offset_bottom = 373.5
grow_horizontal = 2
grow_vertical = 2

[node name="Scaling2DBox" type="HBoxContainer" parent="Box"]
layout_mode = 2

[node name="Label" type="Label" parent="Box/Scaling2DBox"]
layout_mode = 2
text = "Scaling 2D"

[node name="Space" type="VSeparator" parent="Box/Scaling2DBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_hdmo1")

[node name="Scaling2DOptionButton" type="OptionButton" parent="Box/Scaling2DBox"]
unique_name_in_owner = true
layout_mode = 2
selected = 2
item_count = 4
popup/item_0/text = "Nothing"
popup/item_0/id = 0
popup/item_1/text = "MSAA 2x"
popup/item_1/id = 1
popup/item_2/text = "MSAA 4x"
popup/item_2/id = 2
popup/item_3/text = "MSAA 8x"
popup/item_3/id = 3

[node name="Scaling3DBox" type="HBoxContainer" parent="Box"]
layout_mode = 2

[node name="Label" type="Label" parent="Box/Scaling3DBox"]
layout_mode = 2
text = "Scaling 3D"

[node name="Space" type="VSeparator" parent="Box/Scaling3DBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_wyi4u")

[node name="Scaling3DOptionButton" type="OptionButton" parent="Box/Scaling3DBox"]
unique_name_in_owner = true
layout_mode = 2
selected = 3
item_count = 9
popup/item_0/text = "Nothing"
popup/item_0/id = 0
popup/item_1/text = "FXAA"
popup/item_1/id = 1
popup/item_2/text = "MSAA 2x"
popup/item_2/id = 2
popup/item_3/text = "MSAA 4x"
popup/item_3/id = 3
popup/item_4/text = "MSAA 8x"
popup/item_4/id = 4
popup/item_5/text = "TAA"
popup/item_5/id = 5
popup/item_6/text = "FSR 1.0"
popup/item_6/id = 6
popup/item_7/text = "FSR 2.2 Scale 0.5x"
popup/item_7/id = 7
popup/item_8/text = "FSR 2.2 Scale 1.0x"
popup/item_8/id = 8

[node name="ShadowQualityBox" type="HBoxContainer" parent="Box"]
layout_mode = 2

[node name="Label" type="Label" parent="Box/ShadowQualityBox"]
layout_mode = 2
text = "Shadow Quality"

[node name="Space" type="VSeparator" parent="Box/ShadowQualityBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_wyi4u")

[node name="ShadowQualityOptionButton" type="OptionButton" parent="Box/ShadowQualityBox"]
unique_name_in_owner = true
layout_mode = 2
selected = 2
item_count = 3
popup/item_0/text = "Low"
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "High"
popup/item_2/id = 2

[connection signal="item_selected" from="Box/Scaling2DBox/Scaling2DOptionButton" to="SettingsManager" method="_on_scaling_2d_option_button_item_selected"]
[connection signal="item_selected" from="Box/Scaling3DBox/Scaling3DOptionButton" to="SettingsManager" method="_on_scaling_3d_option_button_item_selected"]
[connection signal="item_selected" from="Box/ShadowQualityBox/ShadowQualityOptionButton" to="SettingsManager" method="_on_shadow_quality_option_button_item_selected"]
